2009-02-24  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sql-parser/gda-statement-struct.c:
	* doc/C: doc. improvements
	* libgda/gda-meta-struct.c: misc corrections
	* libgda/gda-data-proxy.c: made it thread safe
	* libgda/libgda.symbols:
	* libgda/gda-util.[ch]: added gda_sql_identifier_split()
	* providers/mysql/*: more MySQL provider work:
	  - remove double quotes around tables names when rendering SQL
	  - make sure the connection uses UTF-8
	  - corrected the handling of NULL values in GdaMysqlRecordset
	  - removed compilation warnings
	  - improved meta data retreival
	  - bug fixes

2009-02-23  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-connection.c: improved debug message
	* libgda/sqlite/sqlite-src/Makefile.am: define the SQLITE_OMIT_LOAD_EXTENSION flag
	to avoid having to link with libdl, possible fix for bug #572277
	* providers/mysql/gda-mysql-meta.c:
	* providers/mysql/gda-mysql-recordset.c: general MySQL provider improvements
	* providers/mysql/gda-mysql-provider.c: possible fix for bug #572394

2009-02-22  Armin Burgmeier  <armin@openismus.com>

	* libgda/gda-util.c (gda_utility_data_model_dump_data_to_xml): Don't
	leak rcols, fixes bug #572734

2009-02-21  Armin Burgmeier  <armin@openismus.com>

	* libgda/sqlite/gda-sqlite-provider.c:
	gda_sqlite_provider_begin_transaction()
	gda_sqlite_provider_commit_transaction()
	gda_sqlite_provider_rollback_transaction(): Set error when statement
	execution fails.

2009-02-21  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-meta-store.c: corrected gda_meta_store_schema_get_structure(), fixes
	bug #542847

2009-02-18  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sqlite/sqlite-src: uses SQLite version 3.6.11

2009-02-18  Vivien Malerba <malerba@gnome-db.org>

	* doc/C: doc. improvements regarding GdaDataHandler
	* providers/mysql/gda-mysql-ddl.c:
	* providers/postgres/gda-postgres-ddl.c:
	* providers/postgres/gda-postgres-handler-bin.c:
	* libgda/sqlite/gda-sqlite-handler-bin.c: