@@ -1,3 +1,11 @@
+2009-02-25  Vivien Malerba <malerba@gnome-db.org>
+
+	* providers/mysql: more work on the MySQL provider:
+	  - use a MYSQL_STMT per prepared statement
+	  - if the same prepared statement is executed more than once and is
+	    a SELECT, then use another MYSQL_STMT to avoid conflicting with
+	    the previous one
+
 2009-02-24  Vivien Malerba <malerba@gnome-db.org>
 
 	* libgda/sql-parser/gda-statement-struct.c:
